main to menu activity

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,7 @@
 
         <include
             layout="@layout/card1_content"
-            android:layout_width="357dp"
+            android:layout_width="match_parent"
             android:layout_height="752dp" />
 
         <include layout="@layout/card2_content" />
@@ -23,5 +23,15 @@
 
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/Checkout"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
     </LinearLayout>
 </ScrollView>
