--- a/app/src/main/res/layout/card1_content.xml
+++ b/app/src/main/res/layout/card1_content.xml
@@ -4,54 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:layout_marginStart="10dp">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/model3"
             android:layout_width="wrap_content"
-            android:layout_height="357dp"
-            tools:srcCompat="@drawable/salmon"
-            />
+            android:layout_height="350dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            app:srcCompat="@drawable/mdl3" />
 
         <Button
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="10dp"
+            android:layout_below="@+id/model3"
+            android:layout_marginTop="98dp"
             android:text="@string/add_button" />
 
         <Button
             android:id="@+id/remove_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
+            android:layout_below="@+id/add_button"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="-48dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/remove_button" />
 
         <TextView
-            android:id="@+id/quantity_text"
-            android:layout_width="wrap_content"
+            android:id="@+id/subtotal_imagetxt"
+            android:layout_width="81dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="102dp"
-            android:layout_marginEnd="167dp"
-            android:layout_marginBottom="228dp"
-            android:text="@string/quantity_text"
+            android:layout_alignBottom="@+id/model3"
+            android:layout_marginStart="33dp"
+            android:layout_marginEnd="105dp"
+            android:layout_marginBottom="-143dp"
+            android:layout_toStartOf="@+id/remove_button"
+            android:layout_toEndOf="@+id/add_button"
+            android:text="@string/subtotal_show"
             android:textSize="18sp" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/subtotal_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/model3"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="120dp"
+            android:layout_marginEnd="132dp"
+            android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/model3_text"
+            android:layout_width="182dp"
+            android:layout_height="57dp"
+            android:layout_alignBottom="@+id/model3"
+            android:layout_marginBottom="6dp"
+            android:text="@string/model3_text"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
+        ></RelativeLayout>
 </android.support.v7.widget.CardView>
