--- a/app/src/main/res/layout/card2_content.xml
+++ b/app/src/main/res/layout/card2_content.xml
@@ -15,7 +15,7 @@
             app:srcCompat="@drawable/mdls" />
 
         <Button
-            android:id="@+id/add_button"
+            android:id="@+id/add_buttonms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/models"
@@ -23,30 +23,30 @@
             android:text="@string/add_button" />
 
         <Button
-            android:id="@+id/remove_button"
+            android:id="@+id/remove_buttonms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/add_button"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="-48dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="433dp"
+            android:layout_marginEnd="6dp"
             android:text="@string/remove_button" />
 
         <TextView
-            android:id="@+id/subtotal_imagetxt"
+            android:id="@+id/subtotal_imagetxtms"
             android:layout_width="81dp"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/models"
             android:layout_marginStart="33dp"
-            android:layout_marginEnd="105dp"
-            android:layout_marginBottom="-143dp"
-            android:layout_toStartOf="@+id/remove_button"
-            android:layout_toEndOf="@+id/add_button"
+            android:layout_marginEnd="78dp"
+            android:layout_marginBottom="-142dp"
+            android:layout_toStartOf="@+id/remove_buttonms"
+            android:layout_toEndOf="@+id/add_buttonms"
             android:text="@string/subtotal_show"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/subtotal_count"
+            android:id="@+id/subtotal_countms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/models"
@@ -63,7 +63,8 @@
             android:layout_marginBottom="6dp"
             android:text="@string/models_text"
             android:textColor="#000000"
-            android:textSize="24sp" />
+            android:textSize="24sp" /><![CDATA[
 
-        ></RelativeLayout>
+        >]]>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
