--- a/app/src/main/res/layout/card3_content.xml
+++ b/app/src/main/res/layout/card3_content.xml
@@ -15,7 +15,7 @@
             app:srcCompat="@drawable/mdlx" />
 
         <Button
-            android:id="@+id/add_button"
+            android:id="@+id/add_buttonmx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modelx"
@@ -23,30 +23,27 @@
             android:text="@string/add_button" />
 
         <Button
-            android:id="@+id/remove_button"
+            android:id="@+id/remove_buttonmx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/add_button"
+            android:layout_below="@+id/add_buttonmx"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="-48dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="-49dp"
+            android:layout_marginEnd="12dp"
             android:text="@string/remove_button" />
 
         <TextView
-            android:id="@+id/subtotal_imagetxt"
+            android:id="@+id/subtotal_imagetxtmx"
             android:layout_width="81dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/modelx"
-            android:layout_marginStart="33dp"
-            android:layout_marginEnd="105dp"
-            android:layout_marginBottom="-143dp"
-            android:layout_toStartOf="@+id/remove_button"
-            android:layout_toEndOf="@+id/add_button"
+            android:layout_alignBaseline="@+id/add_buttonmx"
+            android:layout_alignEnd="@+id/subtotal_countmx"
+            android:layout_marginEnd="101dp"
             android:text="@string/subtotal_show"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/subtotal_count"
+            android:id="@+id/subtotal_countmx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modelx"
